[gd_scene load_steps=9 format=2]

[ext_resource path="res://sprites/noah_sheet_new.png" type="Texture" id=1]
[ext_resource path="res://scripts/noah.gd" type="Script" id=2]
[ext_resource path="res://scenes/enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://scripts/monsterGroup.gd" type="Script" id=4]
[ext_resource path="res://scenes/barrier.tscn" type="PackedScene" id=5]
[ext_resource path="res://scripts/game.gd" type="Script" id=6]
[ext_resource path="res://fonts/prstart.ttf" type="DynamicFontData" id=7]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 7 )

[node name="game" type="Node"]
script = ExtResource( 6 )

[node name="noah" type="Area2D" parent="."]
position = Vector2( 90, 260 )
collision_mask = 0
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="mainSprite" type="Sprite" parent="noah"]
texture = ExtResource( 1 )
hframes = 3

[node name="collisionPolygon" type="CollisionPolygon2D" parent="noah"]
polygon = PoolVector2Array( 5, -4, 7, -3, 7, -2, 6, 1, 4, 4, -5, 4, -7, 1, -8, -2, -8, -3, -6, -4 )

[node name="monsterGroup" type="Node2D" parent="."]
position = Vector2( 20, 0 )
script = ExtResource( 4 )

[node name="monsters" type="Node2D" parent="monsterGroup"]
position = Vector2( -16, 0 )

[node name="enemy" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 32, 31 )

[node name="enemy2" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 48, 31 )

[node name="enemy3" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 64, 31 )

[node name="enemy4" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 80, 31 )

[node name="enemy5" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 96, 31 )

[node name="enemy6" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 112, 31 )

[node name="enemy7" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 128, 31 )

[node name="enemy8" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 144, 31 )

[node name="enemy9" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 32, 44 )
type = 1

[node name="enemy10" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 48, 44 )
type = 1

[node name="enemy11" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 64, 44 )
type = 1

[node name="enemy12" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 80, 44 )
type = 1

[node name="enemy13" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 96, 44 )
type = 1

[node name="enemy14" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 112, 44 )
type = 1

[node name="enemy15" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 128, 44 )
type = 1

[node name="enemy16" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 144, 44 )
type = 1

[node name="enemy17" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 32, 56 )
type = 2

[node name="enemy18" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 48, 56 )
type = 2

[node name="enemy19" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 64, 56 )
type = 2

[node name="enemy20" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 80, 56 )
type = 2

[node name="enemy21" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 96, 56 )
type = 2

[node name="enemy22" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 112, 56 )
type = 2

[node name="enemy23" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 128, 56 )
type = 2

[node name="enemy24" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 144, 56 )
type = 2

[node name="enemy25" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 32, 68 )
type = 2

[node name="enemy26" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 48, 68 )
type = 2

[node name="enemy27" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 64, 68 )
type = 2

[node name="enemy28" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 80, 68 )
type = 2

[node name="enemy29" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 96, 68 )
type = 2

[node name="enemy30" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 112, 68 )
type = 2

[node name="enemy31" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 128, 68 )
type = 2

[node name="enemy32" parent="monsterGroup/monsters" instance=ExtResource( 3 )]
position = Vector2( 144, 68 )
type = 2

[node name="timerPowerRelease" type="Timer" parent="monsterGroup"]

[node name="timerMonstersMove" type="Timer" parent="monsterGroup"]
autostart = true

[node name="timerMotherShip" type="Timer" parent="monsterGroup"]
one_shot = true

[node name="barriers" type="Node" parent="."]

[node name="barrier" parent="barriers" instance=ExtResource( 5 )]
position = Vector2( 35, 234 )

[node name="barrier2" parent="barriers" instance=ExtResource( 5 )]
position = Vector2( 70, 234 )

[node name="barrier3" parent="barriers" instance=ExtResource( 5 )]
position = Vector2( 108, 234 )

[node name="barrier4" parent="barriers" instance=ExtResource( 5 )]
position = Vector2( 143, 234 )

[node name="HUD" type="Node" parent="."]

[node name="scoreLabel" type="Label" parent="HUD"]
margin_top = 5.0
margin_right = 180.0
margin_bottom = 13.0
custom_fonts/font = SubResource( 1 )
text = "9999"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="timeout" from="monsterGroup/timerPowerRelease" to="monsterGroup" method="_on_timerPowerRelease_timeout"]
[connection signal="timeout" from="monsterGroup/timerMonstersMove" to="monsterGroup" method="_on_timerMonstersMove_timeout"]
[connection signal="timeout" from="monsterGroup/timerMotherShip" to="monsterGroup" method="_on_timerMotherShip_timeout"]
